added service worker added some aria attribute some styling

--- a/app/styles/risto_card.scss
+++ b/app/styles/risto_card.scss
@@ -1,4 +1,4 @@
-#restaurants-list {
+.restaurants-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -44,8 +44,6 @@
     display: block;
     margin: 0;
     max-width: 100%;
-    min-height: 248px;
-    min-width: 100%;
   }
   p {
     margin: 0;
