--- a/app/styles/filter.scss
+++ b/app/styles/filter.scss
@@ -1,7 +1,8 @@
 /* ====================== Restaurant Filtering ====================== */
 
 .filter-options {
-  margin: 0 30px 30px;
+  margin: 10px 0 30px;
+  padding: 0 40px;
   border: 1px solid red; // width: 100%;
   height: 50px;
   background-color: #3397DB; // background-color: rgb(32, 219, 63);
