--- a/app/styles/risto_card.scss
+++ b/app/styles/risto_card.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
+  margin: 60px 0;
   padding: 30px 15px 60px;
   text-align: center;
   .risto-card {
