--- a/app/styles/filter.scss
+++ b/app/styles/filter.scss
@@ -3,10 +3,9 @@
 .filter-options {
   margin: 10px 0 30px;
   padding: 0 40px;
-  border: 1px solid red; // width: 100%;
+  border: 1px solid red;
   height: 50px;
-  background-color: #3397DB; // background-color: rgb(32, 219, 63);
-  // align-items: center;
+  background-color: #3397DB; 
   h2 {
     padding: 5px;
     color: white;
