--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -2,7 +2,7 @@ body,
 td,
 th,
 p {
-  font-family: Arial, Helvetica, sans-serif; // font-size: 10pt;
+  font-family: Arial, Helvetica, sans-serif; 
   font-size: 1.4em;
   color: #333;
   line-height: 1.4;
@@ -16,7 +16,7 @@ body {
 
 ul,
 li {
-  font-family: Arial, Helvetica, sans-serif; // font-size: 10pt;
+  font-family: Arial, Helvetica, sans-serif; 
   color: #333;
 }
 
