--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -1,24 +1,16 @@
-/* .inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
- */
-
 .container {
   margin: 0 auto;
 }
 
 .header {
-  // padding: 0 40px;
   h1 {
     line-height: 1.2;
   }
 }
 
 .main {
-  margin: 0 auto; //   width: 1300px;
+  margin: 0 auto; 
+  // width: 1300px;
   background-color: #f3f3f3;
   min-height: 100%;
 }
@@ -28,7 +20,7 @@
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px 40px; // padding: 0 40px;
+  padding: 25px 40px;
   text-align: center;
   text-transform: uppercase;
 }
