--- a/app/styles/map.scss
+++ b/app/styles/map.scss
@@ -1,10 +1,6 @@
 #map-container {
-  padding: 5px 40px 0; // background: blue none repeat scroll 0 0; 
-  // height: 87%;
-  height: 400px; // position: fixed;
-  // right: 0;
-  // top: 80px;
-  // width: 50%;
+  padding: 5px 40px 0;
+  height: 400px; 
   #map {
     border: 1px solid gray;
     background-color: #ccc;
